--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background:url(../images/Desktop.png)
+    background:url(../images/img1.jpg)
     no-repeat center center fixed;
     background-size:cover;
     font-family: 'Inconsolata', monospace;
